force-app/main/default/objects/ServiceHistory__c/ServiceHistory__c.object-meta.xml
<CustomObject>
    <description>List of service interactions with a Dealer/Person/Vehicle</description>
    <label>Service History</label>
    <nameField>
        <displayFormat>SERV-{00000000}</displayFormat>
        <label>Service History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>