force-app/main/default/objects/ServiceHistory__c/fields/Activator_OwnedVehicleId__c.field-meta.xml
<CustomField>
    <fullName>Activator_OwnedVehicleId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Id of the Owned Vehicle Record in the Activator System</inlineHelpText>
    <label>Activator Owned Vehicle Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>