force-app/main/default/objects/ServiceHistory__c/fields/Activator_ServiceId__c.field-meta.xml
<CustomField>
    <fullName>Activator_ServiceId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Id of the Service History record in the Activator System</inlineHelpText>
    <label>Activator Service Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>