force-app/main/default/objects/ServiceHistory__c/fields/Activator_VehicleId__c.field-meta.xml
<CustomField>
    <fullName>Activator_VehicleId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Id of the Vehicle record in the Activator System</inlineHelpText>
    <label>Activator Vehicle Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>