force-app/main/default/objects/ServiceHistory__c/fields/AppointmentDate__c.field-meta.xml
<CustomField>
    <fullName>AppointmentDate__c</fullName>
    <label>Appointment Date</label>
    <type>DateTime</type>
</CustomField>