force-app/main/default/objects/ServiceHistory__c/fields/CustomerTotal__c.field-meta.xml
<CustomField>
    <fullName>CustomerTotal__c</fullName>
    <label>Customer Total</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>