force-app/main/default/objects/ServiceHistory__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Dealer where the service was performed</inlineHelpText>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service History</relationshipLabel>
    <relationshipName>Service_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>