force-app/main/default/objects/ServiceHistory__c/fields/InternalTotal__c.field-meta.xml
<CustomField>
    <fullName>InternalTotal__c</fullName>
    <label>Internal Total</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>