force-app/main/default/objects/ServiceHistory__c/fields/OpCodeTypes__c.field-meta.xml
<CustomField>
    <fullName>OpCodeTypes__c</fullName>
    <inlineHelpText>List of work performed</inlineHelpText>
    <label>Op Code Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Recall</fullName>
            </value>
            <value>
                <fullName>Coupon</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>State Inspection</fullName>
            </value>
            <value>
                <fullName>Red Tires</fullName>
            </value>
            <value>
                <fullName>Yellow Tires</fullName>
            </value>
            <value>
                <fullName>Green Tires</fullName>
            </value>
            <value>
                <fullName>Red Brakes</fullName>
            </value>
            <value>
                <fullName>Yellow Brakes</fullName>
            </value>
            <value>
                <fullName>Green Brakes</fullName>
            </value>
            <value>
                <fullName>Red Battery</fullName>
            </value>
            <value>
                <fullName>Yellow Battery</fullName>
            </value>
            <value>
                <fullName>Green Battery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>