force-app/main/default/objects/ServiceHistory__c/fields/OpenDate__c.field-meta.xml
<CustomField>
    <fullName>OpenDate__c</fullName>
    <inlineHelpText>Date of service appointment</inlineHelpText>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>