force-app/main/default/objects/ServiceHistory__c/fields/Owned_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Owned_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Owned Vehicle record associated with this service call</inlineHelpText>
    <label>Owned Vehicle</label>
    <referenceTo>OwnedVehicles__c</referenceTo>
    <relationshipLabel>Service History</relationshipLabel>
    <relationshipName>Service_History</relationshipName>
    <type>Lookup</type>
</CustomField>