force-app/main/default/objects/ServiceHistory__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Person record the service is related to</inlineHelpText>
    <label>Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service History</relationshipLabel>
    <relationshipName>Service_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>