force-app/main/default/objects/ServiceHistory__c/fields/ROAmount__c.field-meta.xml
<CustomField>
    <fullName>ROAmount__c</fullName>
    <label>RO Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>