force-app/main/default/objects/ServiceHistory__c/fields/RONumber__c.field-meta.xml
<CustomField>
    <fullName>RONumber__c</fullName>
    <label>RO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>