force-app/main/default/objects/ServiceHistory__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Vehicle that service was performed on</inlineHelpText>
    <label>Vehicle</label>
    <referenceTo>Vehicles__c</referenceTo>
    <relationshipLabel>Service History</relationshipLabel>
    <relationshipName>Service_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>