force-app/main/default/objects/ServiceHistory__c/fields/WarrantyTotal__c.field-meta.xml
<CustomField>
    <fullName>WarrantyTotal__c</fullName>
    <label>Warranty Total</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>